ext.junit4Version = '4.12'
ext.junit5Version = '5.7.0'

subprojects {
    apply plugin: "idea"
    apply plugin: "eclipse"

    apply plugin: "java"

    repositories {
        jcenter()
    }

    test {
        useJUnitPlatform()

        testLogging {
            events "passed", "skipped", "failed"
        }
    }

    dependencies {
        //import a BOM to ensure that compatible versions of the JUnit 5 library are used
        implementation platform("org.junit:junit-bom:${junit5Version}")

        // JUnit Jupiter API and TestEngine implementation
        testImplementation("org.junit.jupiter:junit-jupiter")

        // If you also want to support JUnit 3 and JUnit 4 tests
        //testImplementation("junit:junit:${junit4Version}")
        //testRuntimeOnly("org.junit.vintage:junit-vintage-engine")

        //workaround because JUnit 4 is also a dependency. Without JUnit 4 use org.hamcrest:hamcrest:2.2
        testImplementation 'org.hamcrest:hamcrest-core:2.2'

        testImplementation 'org.assertj:assertj-core:3.17.2'
    }

    sourceCompatibility = 1.11
    targetCompatibility = 1.11

}